# tradeforge

./: .gitignore  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/data/: aggregator.py  stream_minute_bars.py  stream_trades.py  test-redis.py
app/db/: database.py  init.sql  models.py  schemas.py
app/prom/: Dockerfile.scraper  metrics.py  metrics_scraper.py  prometheus.yml
app/scripts/: calc_indicators.py  functions.py  populate_assets.py  populate_candles.py  populate_prices.py  populate_strats.py  send_mail.py
app/strats/: opening_range_strategy.py
app/tasks/: tasks.py
app/web/: main.py
app/web/auth/: auth.py  forms.py
app/web/proxy/: nginx.conf
app/web/routes/: base.py  router_asset.py  router_auth.py  router_main.py  router_strategy.py
app/web/static/: style.css
app/web/templates/: asset_detail.html  assets.html  index.html  layout.html  login.html  register.html  strategies.html  strategy_detail.html
scripts/: opening_range_strategy.py  send_raw_mail.py
